--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-  <i-mage ratio="3:4" />
-
+  <i-mage ratio="3:4"></i-mage>
+  <t-ext words="50,80"></t-ext>
   <script src="js/app.js" type="module"></script>
 </body>
 
