fixed color parsing

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Name Of Page</title>
 </head>
 
-<body>
+<body class="invert">
   <i-mage ratio="3:4"></i-mage>
   <t-ext words="50,80"></t-ext>
   <script src="js/app.js" type="module"></script>
