--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 
 <body class="invert">
-  <i-mage ratio="3:4"></i-mage>
-  <t-ext words="50,80"></t-ext>
+  <s-tack gap="2">
+    <i-mage ratio="1:4"></i-mage>
+    <t-ext words="10,15"></t-ext>
+  </s-tack>
   <script src="js/app.js" type="module"></script>
 </body>
 
