grid and stack adjustments

--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
   <title>Name Of Page</title>
 </head>
 
-<body class="invert">
-  <s-tack gap="2">
-    <i-mage ratio="1:4"></i-mage>
-    <t-ext words="10,15"></t-ext>
-  </s-tack>
+<body>
+  <g-rid gap="2">
+    <s-tack>
+      <i-mage ratio="1:4"></i-mage>
+      <t-ext words="10,15"></t-ext>
+    </s-tack>
+    <s-tack>
+      <i-mage ratio="2:4"></i-mage>
+      <t-ext words="10,15"></t-ext>
+    </s-tack>
+  </g-rid>
   <script src="js/app.js" type="module"></script>
 </body>
 
