comments and repetition

--- a/index.html
+++ b/index.html
@@ -10,15 +10,13 @@
 </head>
 
 <body>
-  <g-rid gap="2">
-    <s-tack>
-      <i-mage ratio="1:4"></i-mage>
-      <t-ext words="10,15"></t-ext>
-    </s-tack>
-    <s-tack>
-      <i-mage ratio="2:4"></i-mage>
-      <t-ext words="10,15"></t-ext>
-    </s-tack>
+  <g-rid gap="2" repeat="7">
+    <c-omment wording="hi">
+      <s-tack>
+        <i-mage ratio="1:4"></i-mage>
+        <t-ext words="10,15"></t-ext>
+      </s-tack>
+    </c-omment>
   </g-rid>
   <script src="js/app.js" type="module"></script>
 </body>
