--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
 </head>
 
 <body>
-  <g-rid gap="2" repeat="7">
-    <c-omment wording="hi">
+  <c-omment wording="hi">
+    <!--<g-rid gap="2" repeat="7">
       <s-tack>
-        <i-mage ratio="1:4"></i-mage>
+        <i-mage ratio="1:4" maxWidth="2rem"></i-mage>
         <t-ext words="10,15"></t-ext>
       </s-tack>
-    </c-omment>
-  </g-rid>
+    </g-rid>-->
+  </c-omment>
+  <s-tack>
+    <i-mage ratio="1:4" maxWidth="2rem"></i-mage>
+    <t-ext words="10,15"></t-ext>
+  </s-tack>
+  <i-mage ratio="1:4" maxWidth="10rem"></i-mage>
   <script src="js/app.js" type="module"></script>
 </body>
 
