--- a/index.html
+++ b/index.html
@@ -10,19 +10,12 @@
 </head>
 
 <body>
-  <c-omment wording="hi">
-    <!--<g-rid gap="2" repeat="7">
-      <s-tack>
-        <i-mage ratio="1:4" maxWidth="2rem"></i-mage>
-        <t-ext words="10,15"></t-ext>
-      </s-tack>
-    </g-rid>-->
-  </c-omment>
-  <s-tack>
-    <i-mage ratio="1:4" maxWidth="2rem"></i-mage>
-    <t-ext words="10,15"></t-ext>
-  </s-tack>
-  <i-mage ratio="1:4" maxWidth="10rem"></i-mage>
+  <r-epeat repeat="5">
+    <s-pread justify="space-between" maxWidth="10rem" gap="6">
+      <i-mage ratio="1:1" maxWidth="50rem"></i-mage>
+      <t-ext words="10,15"></t-ext>
+    </s-pread>
+  </r-epeat>
   <script src="js/app.js" type="module"></script>
 </body>
 
