--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
 </head>
 
 <body>
-  <r-epeat repeat="5">
-    <s-pread justify="space-between" maxWidth="10rem" gap="6">
-      <i-mage ratio="1:1" maxWidth="50rem"></i-mage>
-      <t-ext words="10,15"></t-ext>
-    </s-pread>
-  </r-epeat>
+  <c-enter>
+    <s-tack repeat="10">
+      <t-ext words="20,39"></t-ext>
+    </s-tack>
+  </c-enter>
   <script src="js/app.js" type="module"></script>
 </body>
 
