--- a/index.html
+++ b/index.html
@@ -7,14 +7,53 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="stylesheet" href="css/styles.css">
   <title>Name Of Page</title>
+  <template id="card">
+    <h2>Hi</h2>
+    <s-tack gap="1" repeat="4">
+      <t-ext></t-ext>
+    </s-tack>
+    <i-mage ratio="4:5"></i-mage>
+  </template>
 </head>
 
 <body>
-  <c-enter>
-    <s-tack repeat="10">
-      <t-ext words="20,39"></t-ext>
-    </s-tack>
-  </c-enter>
+  <b-ox pad="2" invert>
+    <s-pread spaces="around">
+      <c-omment wording="The logo">
+        <i-mage ratio="6:9" minWidth="5rem"></i-mage>
+      </c-omment>
+      <t-ext words="10,15"></t-ext>
+    </s-pread>
+  </b-ox>
+  <b-ox pad="2">
+    <c-enter>
+      <s-tack>
+        <h1>Hello world!</h1>
+        <s-tack repeat="4">
+          <t-ext words="20, 60"></t-ext>
+        </s-tack>
+        <c-lone of="card"></c-lone>
+      </s-tack>
+    </c-enter>
+  </b-ox>
+  <b-ox pad="2" invert>
+    <c-luster align="bottom">
+      <b-ox maxWidth="15rem">
+        <i-mage ratio="6:9"></i-mage>
+        <t-ext words="5,10"></t-ext>
+      </b-ox>
+      <b-ox maxWidth="30rem">
+        <i-mage ratio="6:9"></i-mage>
+        <t-ext words="5,10"></t-ext>
+      </b-ox>
+      <b-ox maxWidth="15rem">
+        <c-omment wording="The final image">
+          <i-mage ratio="6:9"></i-mage>
+          <t-ext words="5,10"></t-ext>
+        </c-omment>
+      </b-ox>
+    </c-luster>
+  </b-ox>
   <script src="js/app.js" type="module"></script>
 </body>
 
