line component and tweaks

--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="stylesheet" href="css/styles.css">
   <title>Name Of Page</title>
-  <template id="card">
-    <h2>Hi</h2>
-    <s-tack gap="1" repeat="4">
-      <t-ext></t-ext>
-    </s-tack>
-    <i-mage ratio="4:5"></i-mage>
+  <template id="nav">
+    <b-ox invert pad="2">
+      <l-ine between="&middot;">
+        <div>Yes</div>
+        <div>No</div>
+        <div>Yes</div>
+        <div>No</div>
+        <div>Yes</div>
+        <div>No</div>
+        <div>Yes</div>
+        <div>No</div>
+      </l-ine>
+    </b-ox>
   </template>
 </head>
 
 <body>
-  <b-ox pad="2" invert>
-    <s-pread spaces="around">
-      <c-omment wording="The logo">
-        <i-mage ratio="6:9" minWidth="5rem"></i-mage>
-      </c-omment>
-      <t-ext words="10,15"></t-ext>
-    </s-pread>
-  </b-ox>
+  <c-lone of="nav"></c-lone>
   <b-ox pad="2">
     <c-enter>
       <s-tack>
@@ -32,13 +32,12 @@
         <s-tack repeat="4">
           <t-ext words="20, 60"></t-ext>
         </s-tack>
-        <c-lone of="card"></c-lone>
       </s-tack>
     </c-enter>
   </b-ox>
   <b-ox pad="2" invert>
-    <c-luster align="bottom">
-      <b-ox maxWidth="15rem">
+    <c-luster>
+      <b-ox maxWidth="10rem">
         <i-mage ratio="6:9"></i-mage>
         <t-ext words="5,10"></t-ext>
       </b-ox>
@@ -46,7 +45,7 @@
         <i-mage ratio="6:9"></i-mage>
         <t-ext words="5,10"></t-ext>
       </b-ox>
-      <b-ox maxWidth="15rem">
+      <b-ox maxWidth="10rem">
         <c-omment wording="The final image">
           <i-mage ratio="6:9"></i-mage>
           <t-ext words="5,10"></t-ext>
