--- a/index.html
+++ b/index.html
@@ -23,31 +23,13 @@
     <b-ox pad="2">
       <c-enter>
         <f-low>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed bibendum nisi nec diam accumsan vestibulum.
-            Suspendisse fermentum elit ut gravida mattis. Nulla faucibus tempor neque in aliquam. Nullam blandit
-            elementum mauris. Phasellus ut pellentesque magna, non consectetur nunc. Proin pellentesque accumsan
-            hendrerit. Vivamus massa dolor, scelerisque et bibendum eu, cursus sed leo. Morbi suscipit tincidunt
-            sollicitudin. Donec bibendum non sapien vitae scelerisque. Fusce tincidunt tincidunt purus, quis volutpat
-            turpis eleifend et. Mauris sed risus quis odio bibendum faucibus sit amet eu erat. Vivamus sodales sem
-            egestas ultricies maximus.</p>
-          <p>Donec ultrices fermentum lorem, nec tristique eros hendrerit eget. Praesent sodales orci eget mi placerat
-            convallis. Duis sed vestibulum ipsum. Nam aliquet gravida sodales. Sed lobortis, metus non sagittis
-            ullamcorper, lacus ante volutpat orci, vel consequat ipsum felis a elit. Nullam rhoncus ac augue eget
-            lobortis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque convallis blandit vehicula.
-            Mauris consequat efficitur ligula, sagittis vehicula eros sodales convallis. Nulla sagittis, sapien eget
-            congue tempus, risus nulla bibendum odio, non vulputate urna neque at nisi. In a porttitor risus. Aliquam
-            at nisl et quam porta semper. Nam laoreet et dolor id ultricies. Suspendisse eget ante mauris. Sed in
-            malesuada diam, vel condimentum arcu.</p>
-          <p>In libero magna, faucibus et fermentum interdum, fermentum eget neque. Phasellus porta mauris a orci
-            interdum euismod. Etiam at enim faucibus, bibendum lorem sit amet, finibus odio. Sed dignissim pharetra
-            convallis. Praesent iaculis eu massa nec faucibus. In feugiat ullamcorper elit, sit amet consectetur ante
-            ornare sed. Proin tellus dui, tristique quis nisl sit amet, aliquet tempor est. Proin sed quam laoreet,
-            tempor velit ut, posuere leo. Maecenas commodo neque lorem, eget egestas lectus bibendum eu. Suspendisse
-            rutrum quis mi in vestibulum. Nam sed imperdiet ex, sed pellentesque justo. Sed maximus magna sit amet mi
-            tincidunt vehicula. Nulla at dictum nibh.</p>
+          <t-ext words="20,30"></t-ext>
+          <t-ext words="20,60"></t-ext>
+          <t-ext words="10,20"></t-ext>
         </f-low>
       </c-enter>
     </b-ox>
+
   </s-creen>
   <script src="js/app.js" type="module"></script>
 </body>
