flow focus style

--- a/index.html
+++ b/index.html
@@ -23,9 +23,15 @@
     <b-ox pad="2">
       <c-enter>
         <f-low>
-          <t-ext words="20,30"></t-ext>
-          <t-ext words="20,60"></t-ext>
-          <t-ext words="10,20"></t-ext>
+          <c-omment wording="Step 1">
+            <t-ext words="80,120"></t-ext>
+          </c-omment>
+          <c-omment wording="Step 2">
+            <t-ext words="80,120"></t-ext>
+          </c-omment>
+          <c-omment wording="Step 3">
+            <t-ext words="80,120"></t-ext>
+          </c-omment>
         </f-low>
       </c-enter>
     </b-ox>
