image captions etc

--- a/demo.html
+++ b/demo.html
@@ -12,9 +12,8 @@
       <s-pread>
         <a class="u-h2" href="#">Bruck</a>
         <l-ine between="&middot;">
-          <div>Some</div>
-          <div>Options</div>
-          <div>Here</div>
+          <a href="#index">Home</a>
+          <a href="#about">About</a>
         </l-ine>
       </s-pread>
     </b-ox>
@@ -35,8 +34,28 @@
           <s-tack repeat="2">
             <t-ext words="15,40"></t-ext>
           </s-tack>
-          <i-mage ratio="1:3" caption="A placeholder image"></i-mage>
+          <g-rid>
+            <i-mage ratio="1:3" caption="A placeholder image"></i-mage>
+            <i-mage ratio="1:3" caption="Another fake image"></i-mage>
+          </g-rid>
           <s-tack repeat="2">
+            <t-ext words="15,40"></t-ext>
+          </s-tack>
+        </s-tack>
+      </c-enter>
+    </b-ox>
+  </s-creen>
+  <s-creen id="about">
+    <c-omment wording="This is the page header">
+      <c-lone of="nav" u-invert></c-lone>
+    </c-omment>
+    <b-ox pad="2">
+      <c-enter>
+        <s-tack>
+          <c-omment wording="There must be one h1 per page">
+            <h1>The about page!</h1>
+          </c-omment>
+          <s-tack repeat="5">
             <t-ext words="15,40"></t-ext>
           </s-tack>
         </s-tack>
