--- a/demo.html
+++ b/demo.html
@@ -23,7 +23,7 @@
 <body>
   <s-creen id="index">
     <c-omment wording="This is the page header">
-      <c-lone of="nav" u-invert></c-lone>
+      <c-lone of="nav" class="u-invert"></c-lone>
     </c-omment>
     <b-ox pad="2">
       <c-enter>
