demo.html image reset

--- a/demo.html
+++ b/demo.html
@@ -34,7 +34,7 @@
           <s-tack repeat="2">
             <t-ext words="15,40"></t-ext>
           </s-tack>
-          <g-rid itemWidth="10rem">
+          <g-rid>
             <i-mage ratio="1:3" caption="A placeholder image"></i-mage>
             <i-mage ratio="1:3" caption="Another fake image"></i-mage>
           </g-rid>
