--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
 </head>
 
 <body>
-  <!-- start here -->
+  <c-enter>
+    <s-idebar width="10rem">
+      <s-tack repeat="3">
+        <t-ext></t-ext>
+      </s-tack>
+      <s-tack repeat="3">
+        <t-ext></t-ext>
+      </s-tack>
+    </s-idebar>
+  </c-enter>
   <script src="js/app.js" type="module"></script>
 </body>
 
