--- a/index.html
+++ b/index.html
@@ -10,7 +10,31 @@
 </head>
 
 <body>
-  <!-- start here -->
+  <div class="wrap">
+    <c-enter>
+      <s-idebar width="10rem">
+        <s-tack repeat="3">
+          <ul>
+            <li>
+              <t-ext words="1,2"></t-ext>
+            </li>
+            <li>
+              <t-ext words="1,2"></t-ext>
+            </li>
+            <li>
+              <t-ext words="1,2"></t-ext>
+            </li>
+          </ul>
+        </s-tack>
+        <s-tack>
+          <h2>Hello World!</h2>
+          <s-tack repeat="3">
+            <t-ext words="20"></t-ext>
+          </s-tack>
+        </s-tack>
+      </s-idebar>
+    </c-enter>
+  </div>
   <script src="js/app.js" type="module"></script>
 </body>
 
