--- a/index.html
+++ b/index.html
@@ -10,16 +10,7 @@
 </head>
 
 <body>
-  <c-enter>
-    <s-idebar width="10rem">
-      <s-tack repeat="3">
-        <t-ext></t-ext>
-      </s-tack>
-      <s-tack repeat="3">
-        <t-ext></t-ext>
-      </s-tack>
-    </s-idebar>
-  </c-enter>
+  <!-- start here -->
   <script src="js/app.js" type="module"></script>
 </body>
 
