--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <!-- start here -->
+  <p-rogress steps="one,two,three" current="2"></p-rogress>
   <script src="js/app.js" type="module"></script>
 </body>
 
