--- a/index.html
+++ b/index.html
@@ -10,31 +10,7 @@
 </head>
 
 <body>
-  <b-ox>
-    <f-low>
-      <div>
-        <p-rogress steps="one,two,three" current="one"></p-rogress>
-        <h2>One</h2>
-        <s-tack repeat="3">
-          <t-ext></t-ext>
-        </s-tack>
-      </div>
-      <div>
-        <p-rogress steps="one,two,three" current="two"></p-rogress>
-        <h2>Two</h2>
-        <s-tack repeat="3">
-          <t-ext></t-ext>
-        </s-tack>
-      </div>
-      <div>
-        <p-rogress steps="one,two,three" current="three"></p-rogress>
-        <h2>Three</h2>
-        <s-tack repeat="3">
-          <t-ext></t-ext>
-        </s-tack>
-      </div>
-    </f-low>
-  </b-ox>
+  <!-- start here -->
   <script src="js/app.js" type="module"></script>
 </body>
 
