start of modeling work

--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
 </head>
 
 <body>
-  <!-- start here -->
+  <b-ox>
+    <m-odel name="nameAndNumber">
+      <s-tack>
+        <i-nput label="Your name" name="name"></i-nput>
+        <s-elect options="one,two,three" selected="dog poo" name="number"></s-elect>
+        <button type="submit">Submit</button>
+      </s-tack>
+    </m-odel>
+  </b-ox>
   <script src="js/app.js" type="module"></script>
 </body>
 
