--- a/index.html
+++ b/index.html
@@ -14,10 +14,24 @@
     <m-odel name="nameAndNumber">
       <s-tack>
         <i-nput label="Your name" name="name"></i-nput>
-        <s-elect options="one,two,three" selected="dog poo" name="number"></s-elect>
+        <r-adios options="poo, wee, dick" checked="dick" name="profanity"></r-adios>
+        <c-heckbox checked name="ticky" label="Check me out"></c-heckbox>
         <button type="submit">Submit</button>
       </s-tack>
     </m-odel>
+    <o-utput input="nameAndNumber">
+      <g-rid>
+        <p>
+          {{ this.name }}
+        </p>
+        <p>
+          {{ 1 + 1 }}
+        </p>
+        <p>
+          {{ this.ticky }}
+        </p>
+      </g-rid>
+    </o-utput>
   </b-ox>
   <script src="js/app.js" type="module"></script>
 </body>
