focus styles for checkbox and radio

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 </head>
 
 <body>
-  <!-- start here -->
+  <b-ox>
+    <s-tack>
+      <r-adios options="poo,wee,bum" checked="poo" name="stuff"></r-adios>
+      <c-heckbox options="poo" checked name="stuff2"></c-heckbox>
+    </s-tack>
+  </b-ox>
   <script src="js/app.js" type="module"></script>
 </body>
 
