expanded inline styles etc

--- a/index.html
+++ b/index.html
@@ -10,12 +10,7 @@
 </head>
 
 <body>
-  <b-ox>
-    <s-tack>
-      <r-adios options="poo,wee,bum" checked="poo" name="stuff"></r-adios>
-      <c-heckbox options="poo" checked name="stuff2"></c-heckbox>
-    </s-tack>
-  </b-ox>
+  <!-- start here -->
   <script src="js/app.js" type="module"></script>
 </body>
 
