revert index.html

--- a/index.html
+++ b/index.html
@@ -10,13 +10,7 @@
 </head>
 
 <body>
-  <s-tack repeat="4">
-    <l-ine between="&bull;">
-      <p>1</p>
-      <p>2</p>
-      <p>3</p>
-    </l-ine>
-  </s-tack>
+  <!-- start here -->
   <script src="js/app.js" type="module"></script>
 </body>
 
