--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
   <!-- start here -->
+  <t-extarea label="Write stuff here" name="test"></t-extarea>
   <script src="js/app.js" type="module"></script>
 </body>
 
