sidebar bug fix

--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 
 <body>
   <!-- start here -->
+  <c-enter>
+    <s-tack>
+      <h2>
+        <t-ext></t-ext>
+      </h2>
+      <s-tack repeat="5,8">
+        <t-ext></t-ext>
+      </s-tack>
+    </s-tack>
+  </c-enter>
   <script src="js/app.js" type="module"></script>
 </body>
 
