--- a/sidebar.html
+++ b/sidebar.html
@@ -11,21 +11,15 @@
 
 <body>
   <div class="wrap">
-    <c-enter maxWidth="80vw">
+    <c-enter maxWidth="65vw">
       <div class="squish browser">
-        <s-idebar width="10rem">
-          <s-tack>
-            <h3>Sidebar</h3>
-            <s-tack repeat="2">
-              <t-ext words="10"></t-ext>
-            </s-tack>
-          </s-tack>
-          <s-tack>
-            <h2>Main content</h2>
-            <s-tack repeat="3">
-              <t-ext words="25"></t-ext>
-            </s-tack>
-          </s-tack>
+        <s-idebar width="10rem" gap="2" style="display: block; overflow: hidden; background-color:hsla(0,0%,15%)">
+          <b-ox border style="min-height: 50vh; background-color: #000">
+
+          </b-ox>
+          <b-ox border style="min-height: 50vh; background-color: #000">
+
+          </b-ox>
         </s-idebar>
       </div>
     </c-enter>
